Update DirectoryCodeResolver.java